--- a/asserts/CSS/stylesheet.css
+++ b/asserts/CSS/stylesheet.css
@@ -1,6 +1,7 @@
+/*To header */
 header:first-of-type{
     background: #73A24E;
-    width: 98vw;
+    width: 99vw;
     height: 40px;
     position: relative;
 }
@@ -31,10 +32,15 @@ header>nav>ul>li:hover a{
 header>nav>ul>li>a>i{
     margin-right: 10px;
 }
+/*------------------------------------------------------------------------------------*/
+/*To main */
+/*First Section in main*/
 main>section:nth-child(1)>img{
-    width: 98vw;
+    width: 99vw;
     height: 94vh;
 }
+/*------------------------------------------------------------------------*/
+/*Second Section in main*/
 main>section:nth-child(2)>header{
     width: 98vw;
     height: 40px;
@@ -42,10 +48,134 @@ main>section:nth-child(2)>header{
 main>section:nth-child(2)>header>h1{
     color: black;
 }
-main>section:nth-child(2)>section>p:nth-child(1){
+main>section:nth-child(2)>p{
     font-size: 20px;
     color: red;
 }
-main>section:nth-child(2)>section>article:nth-child(2)>p{
+main>section:nth-child(2)>article>p{
     text-align: center;
 }
+/*------------------------------------------------------------------------*/
+/*Third Section inb main*/
+main>section:nth-child(3){
+    height: 270px;
+}
+main>section:nth-child(3)>section:nth-child(2){
+    position: relative;
+    height: 120px;
+    width: 98vw;
+}
+main>section:nth-child(3)>section:nth-child(2)>div>img{
+    height: 100px;
+    width: 100px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+main>section:nth-child(3)>section:nth-child(2)>div{
+    position: absolute;
+    width:calc(99% / 5);
+    height: 120px;
+}
+main>section:nth-child(3)>section:nth-child(2)>div:nth-child(1){
+    left: 0;
+    margin-top: 10px;
+}
+main>section:nth-child(3)>section:nth-child(2)>div:nth-child(2){
+    left: calc(99% / 5);
+    margin-top: 10px;
+}
+main>section:nth-child(3)>section:nth-child(2)>div:nth-child(3){
+    right: 0;
+    left: 0;
+    margin: auto;
+    margin-top: 10px;
+}
+main>section:nth-child(3)>section:nth-child(2)>div:nth-child(4){
+    right: calc(99% / 5);
+    margin-top: 10px;
+}
+main>section:nth-child(3)>section:nth-child(2)>div:nth-child(5){
+    right: 0;
+    margin-top: 10px;
+}
+main>section:nth-child(3)>section:nth-child(3)>div>img{
+    height: 100px;
+    width: 100px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+main>section:nth-child(3)>section:nth-child(3)>div{
+    position: absolute;
+    width:calc(99% / 5);
+    height: 120px;
+}
+main>section:nth-child(3)>section:nth-child(3)>div:nth-child(1){
+    left: 0;
+}
+main>section:nth-child(3)>section:nth-child(3)>div:nth-child(2){
+    left: calc(99% / 5);
+}
+main>section:nth-child(3)>section:nth-child(3)>div:nth-child(3){
+    right: 0;
+    left: 0;
+    margin: auto;
+}
+main>section:nth-child(3)>section:nth-child(3)>div:nth-child(4){
+    right: calc(99% /5);
+}
+main>section:nth-child(3)>section:nth-child(3)>div:nth-child(5){
+    right: 0;
+}
+/*------------------------------------------------------------------------*/
+/*Fourth section in main*/
+main>section:nth-child(4)>section:nth-child(2){
+    height: 200px;
+}
+main>section:nth-child(4)>section:nth-child(2)>div{
+    position: absolute;
+    height:180px;
+    width: calc(99% /3);
+    margin-top: 20px;
+}
+main>section:nth-child(4)>section:nth-child(2)>div:nth-child(1){
+    left: 0;
+}
+main>section:nth-child(4)>section:nth-child(2)>div:nth-child(2){
+    left: calc(99% /3);
+}
+main>section:nth-child(4)>section:nth-child(2)>div:nth-child(3){
+    right: 0;
+}
+main>section:nth-child(4)>section:nth-child(2)>div>img{
+    position: absolute;
+    height:180px;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+/*------------------------------------------------------------------------*/
+/*Div in main*/
+main>a>div:first-of-type{
+    height: 50px;
+    width: 50px;
+    border-radius: 100%;
+    background: red;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+}
+main>a>div:first-of-type>img{
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
