--- a/asserts/CSS/stylesheet.css
+++ b/asserts/CSS/stylesheet.css
@@ -118,7 +118,7 @@ main>section:nth-child(5){
 /*sixth section in main*/
 main>section:nth-child(6)>section:nth-child(2){
     width: 98vw;
-    height: 160vh;
+    height: 200vh;
     display: grid;
     grid-template-rows: repeat(6,1fr);
     grid-template-columns: repeat(5,1fr);
@@ -136,28 +136,188 @@ main>section:nth-child(6)>section:nth-child(2)>div:nth-child(1){
 main>section:nth-child(6)>section:nth-child(2)>div:nth-child(2){
     grid-column: 4/6;
     grid-row: 1/5;
-    background:none;
+    background:url("../images/cov.jpg");
     background-size: cover;
 }
 main>section:nth-child(6)>section:nth-child(2)>div:nth-child(3) {
     grid-column: 1/2;
     grid-row: 3/5;
+    background: url("../images/20220228_182243.jpg");
     background-size: cover;
 }
 main>section:nth-child(6)>section:nth-child(2)>div:nth-child(4){
     grid-column: 2/4;
     grid-row: 3/5;
+    background: url("../images/891ac053-534d-4bff-ac9a-56f55a890335.jpg");
     background-size: cover;
 }
 main>section:nth-child(6)>section:nth-child(2)>div:nth-child(5){
     grid-column: 1/3;
     grid-row: 5/7;
+    background: url("../images/a9219258-fa1a-42ae-8f5d-ee32f205786f.jpg");
     background-size: cover;
 }
 main>section:nth-child(6)>section:nth-child(2)>div:nth-child(6){
     grid-column: 3/7;
     grid-row: 5/7;
+    background: url("../images/IMG-20200930-WA00h04.jpg");
     background-size: cover;
+}
+/*------------------------------------------------------------------------*/
+/*Last section in main*/
+main>section:nth-child(7) {
+    background: #928989;
+    height: 35vh;
+    width: 98vw;
+    position: relative;
+}
+main>section:nth-child(7)>h3:nth-child(1){
+    color: white;
+    position: absolute;
+    top: 4%;
+    margin: auto;
+}
+main>section:nth-child(7)>section:nth-child(2){
+    height: 100%;
+    width: calc(100% /3);
+}
+main>section:nth-child(7)>section:nth-child(2)>div:nth-child(1){
+    background: url("../images/post-box.png");
+    background-size: cover;
+    height: 30%;
+    width: 5%;
+    position: absolute;
+    top: 20%;
+    left: 1%;
+}
+main>section:nth-child(7)>section:nth-child(2)>p:nth-child(2){
+    color: white;
+    position: absolute;
+    top: 20%;
+    left: 7%;
+    margin: auto;
+}
+main>section:nth-child(7)>section:nth-child(2)>section:nth-child(3){
+    height: 10vh;
+    width: 20vw;
+    display: flex;
+    align-items: center;
+    position: absolute;
+    margin: auto;
+    top: 20%;
+    left: 16%;
+}
+main>section:nth-child(7)>section:nth-child(2)>section:nth-child(3)>a>div{
+    height: 9vh;
+    width: 4vw;
+}
+main>section:nth-child(7)>section:nth-child(2)>section:nth-child(3)>a:nth-child(1)>div:nth-child(1){
+    background: url("../images/teli.png");
+    background-size: cover;
+}
+main>section:nth-child(7)>section:nth-child(2)>section:nth-child(3)>a:nth-child(2)>div:nth-child(1){
+    background: url("../images/Whatsapp.png");
+    background-size: cover;
+}
+main>section:nth-child(7)>section:nth-child(2)>section:nth-child(3)>a:nth-child(3)>div:nth-child(1){
+    background: url("../images/Telegram.png");
+    background-size: cover;
+}
+main>section:nth-child(7)>section:nth-child(2)>section:nth-child(3)>a:nth-child(4)>div:nth-child(1){
+    background: url("../images/email_gmail.png");
+    background-size: cover;
+}
+main>section:nth-child(7)>section:nth-child(2)>section:nth-child(4){
+    height: 10vh;
+    width: 20vw;
+    display: flex;
+    align-items: center;
+    position: absolute;
+    margin: auto;
+    top: 47%;
+    left: 16%;
+}
+main>section:nth-child(7)>section:nth-child(2)>section:nth-child(4)>a>div{
+    height: 9vh;
+    width: 4vw;
+}
+main>section:nth-child(7)>section:nth-child(2)>section:nth-child(4)>a:nth-child(1)>div:nth-child(1){
+    background: url("../images/GitHub-Logo.png");
+    background-size: cover;
+}
+main>section:nth-child(7)>section:nth-child(2)>section:nth-child(4)>a:nth-child(2)>div:nth-child(1){
+    background: url("../images/linkedin.png");
+    background-size: cover;
+}
+main>section:nth-child(7)>section:nth-child(2)>section:nth-child(4)>a:nth-child(3)>div:nth-child(1){
+    background: url("../images/Facebook.png");
+    background-size: cover;
+}
+main>section:nth-child(7)>section:nth-child(2)>section:nth-child(4)>a:nth-child(4)>div:nth-child(1){
+    background: url("../images/instagram.png");
+    background-size: cover;
+}
+/*--------------------------------------------------*/
+main>section:nth-child(7)>section:nth-child(3){
+    width: calc(100% /3);
+    height: 35vh;
+    background: black;
+    position: absolute;
+    margin: auto;
+    top: 0;
+    left: calc(100%/3);
+}
+main>section:nth-child(7)>section:nth-child(3)>form{
+    position: absolute;
+    color: white;
+    top: 4%;
+    margin: auto;
+}
+/*---------------------------------------------------------------*/
+main>section:nth-child(7)>section:nth-child(4){
+    position: absolute;
+    width: calc(100% /3);
+    height: 35vh;
+    right: 0;
+    top: 0;
+    margin: auto;
+}
+main>section:nth-child(7)>section:nth-child(4)>div{
+    background: url("../images/MyLogo.png");
+    background-size: cover;
+    height: 17vh;
+    width: 9vw;
+    position: absolute;
+    bottom: 15%;
+    right: 15%;
+    margin: auto;
+}
+main>section:nth-child(7)>section:nth-child(4)>p{
+    font-size: 2vh;
+    color: white;
+    position: absolute;
+    bottom: 2%;
+    right: 0;
+}
+/*------------------------------------------------------------------------*/
+/*footer*/
+footer{
+    background: #73A24E;
+    width: 98vw;
+    height: 8vh;
+    position: relative;
+}
+footer>div{
+    background: url("../images/MyLogo.png");
+    background-size: cover;
+    height: 8vh;
+    width: 5vw;
+    position: absolute;
+    margin: auto;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 /*------------------------------------------------------------------------*/
 /*Div in main*/
@@ -165,19 +325,10 @@ main>a>div:first-of-type{
     height: 50px;
     width: 50px;
     border-radius: 100%;
-    background: red;
-    position: fixed;
-    right: 0;
+    background: url("../images/arrow.png");
+    background-size: cover;
+    position: fixed;right: 0;
     bottom: 0;
 }
-main>a>div:first-of-type>img{
-    width: 30px;
-    height: 30px;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
-}
+
 
