--- a/asserts/CSS/stylesheet.css
+++ b/asserts/CSS/stylesheet.css
@@ -66,14 +66,30 @@ main>section:nth-child(3)>section:nth-child(2){
     align-items: center;
     justify-content: space-around;
 }
-main>section:nth-child(3)>section:nth-child(2)>div>img{
-    height: 100px;
-    width: 100px;
-}
 main>section:nth-child(3)>section:nth-child(2)>div{
     height: 100px;
     width: 100px;
-    border: 1px solid red;
+}
+main>section:nth-child(3)>section:nth-child(2)>div:nth-child(1){
+    background: url("../images/java.png");
+    background-size: cover;
+}
+main>section:nth-child(3)>section:nth-child(2)>div:nth-child(2){
+    background: url("../images/MySql.png");
+    background-size: cover;
+    width: 150px;
+}
+main>section:nth-child(3)>section:nth-child(2)>div:nth-child(3){
+    background: url("../images/HTML.png");
+    background-size: cover;
+}
+main>section:nth-child(3)>section:nth-child(2)>div:nth-child(4){
+    background: url("../images/CSS.png");
+    background-size: cover;
+}
+main>section:nth-child(3)>section:nth-child(2)>div:nth-child(5){
+    background: url("../images/javascript.png");
+    background-size: cover;
 }
 main>section:nth-child(3)>section:nth-child(3){
     height: 120px;
@@ -81,14 +97,32 @@ main>section:nth-child(3)>section:nth-child(3){
     align-items: center;
     justify-content: space-around;
 }
-main>section:nth-child(3)>section:nth-child(3)>div>img{
-    height: 100px;
-    width: 100px;
-}
 main>section:nth-child(3)>section:nth-child(3)>div{
     height: 100px;
     width: 100px;
-    border: 1px solid red;
+}
+main>section:nth-child(3)>section:nth-child(3)>div:nth-child(1){
+    background: url("../images/hibernete.jpg");
+    background-size: cover;
+}
+main>section:nth-child(3)>section:nth-child(3)>div:nth-child(2){
+    background: url("../images/figma Logo.png");
+    background-size: cover;
+    width: 150px;
+}
+main>section:nth-child(3)>section:nth-child(3)>div:nth-child(3){
+    background: url("../images/GitHub-Logo.png");
+    background-size: cover;
+    width: 150px;
+}
+main>section:nth-child(3)>section:nth-child(3)>div:nth-child(4){
+    background: url("../images/intellij-idea.png");
+    background-size: cover;
+}
+main>section:nth-child(3)>section:nth-child(3)>div:nth-child(5){
+    background: url("../images/Gimp.png");
+    background-size: cover;
+    width: 150px;
 }
 /*------------------------------------------------------------------------*/
 /*Fourth section in main*/
@@ -98,15 +132,23 @@ main>section:nth-child(4)>section:nth-child(2){
     align-items: center;
     justify-content: space-evenly;
 }
-main>section:nth-child(4)>section:nth-child(2)>div{
-    height:180px;
-    width: 180px;
-    margin-top: 20px;
-
+main>section:nth-child(4)>section:nth-child(2)>div:nth-child(1){
+    height:70%;
+    width: 15vw;
+    background: url("../images/service1.png");
+    background-size: cover;
 }
-main>section:nth-child(4)>section:nth-child(2)>div>img{
-    height:180px;
-    border: 1px solid red;
+main>section:nth-child(4)>section:nth-child(2)>div:nth-child(2){
+    height:70%;
+    width: 19vw;
+    background: url("../images/Service2.png");
+    background-size: cover;
+}
+main>section:nth-child(4)>section:nth-child(2)>div:nth-child(3){
+    height:70%;
+    width: 17vw;
+    background: url("../images/service3.png");
+    background-size: cover;
 }
 /*------------------------------------------------------------------------*/
 /*Fifth Section in main*/
@@ -261,7 +303,6 @@ main>section:nth-child(7)>section:nth-child(2)>section:nth-child(4)>a:nth-child(
 main>section:nth-child(7)>section:nth-child(3){
     width: calc(100% /3);
     height: 35vh;
-    background: black;
     position: absolute;
     margin: auto;
     top: 0;
@@ -272,6 +313,15 @@ main>section:nth-child(7)>section:nth-child(3)>form{
     color: white;
     top: 4%;
     margin: auto;
+    width: 100%;
+    height: 100%;
+}
+main>section:nth-child(7)>section:nth-child(3)>form>fieldset>input:nth-child(4){
+    width: 100%;
+}
+main>section:nth-child(7)>section:nth-child(3)>form>fieldset>textarea:nth-child(8){
+    width: 100%;
+    height: 70%;
 }
 /*---------------------------------------------------------------*/
 main>section:nth-child(7)>section:nth-child(4){
@@ -314,7 +364,6 @@ footer>div{
     width: 5vw;
     position: absolute;
     margin: auto;
-    top: 0;
     bottom: 0;
     left: 0;
     right: 0;
@@ -322,13 +371,14 @@ footer>div{
 /*------------------------------------------------------------------------*/
 /*Div in main*/
 main>a>div:first-of-type{
-    height: 50px;
-    width: 50px;
+    height: 6%;
+    width: 3%;
     border-radius: 100%;
     background: url("../images/arrow.png");
     background-size: cover;
-    position: fixed;right: 0;
-    bottom: 0;
+    position: fixed;
+    right: 1%;
+    bottom: 8%;
 }
 
 
