--- a/asserts/CSS/stylesheet.css
+++ b/asserts/CSS/stylesheet.css
@@ -37,7 +37,7 @@ header>nav>ul>li>a>i{
 /*First Section in main*/
 main>section:nth-child(1)>img{
     width: 99vw;
-    height: 94vh;
+    height: 50vw;
 }
 /*------------------------------------------------------------------------*/
 /*Second Section in main*/
@@ -67,8 +67,8 @@ main>section:nth-child(3)>section:nth-child(2){
     justify-content: space-around;
 }
 main>section:nth-child(3)>section:nth-child(2)>div{
-    height: 100px;
-    width: 100px;
+    height: 7vw;
+    width: 7vw;
 }
 main>section:nth-child(3)>section:nth-child(2)>div:nth-child(1){
     background: url("../images/java.png");
@@ -77,7 +77,7 @@ main>section:nth-child(3)>section:nth-child(2)>div:nth-child(1){
 main>section:nth-child(3)>section:nth-child(2)>div:nth-child(2){
     background: url("../images/MySql.png");
     background-size: cover;
-    width: 150px;
+    width: 13.5vw;
 }
 main>section:nth-child(3)>section:nth-child(2)>div:nth-child(3){
     background: url("../images/HTML.png");
@@ -98,8 +98,8 @@ main>section:nth-child(3)>section:nth-child(3){
     justify-content: space-around;
 }
 main>section:nth-child(3)>section:nth-child(3)>div{
-    height: 100px;
-    width: 100px;
+    height: 7vw;
+    width: 7vw;
 }
 main>section:nth-child(3)>section:nth-child(3)>div:nth-child(1){
     background: url("../images/hibernete.jpg");
@@ -108,12 +108,12 @@ main>section:nth-child(3)>section:nth-child(3)>div:nth-child(1){
 main>section:nth-child(3)>section:nth-child(3)>div:nth-child(2){
     background: url("../images/figma Logo.png");
     background-size: cover;
-    width: 150px;
+    width: 13.5vw;
 }
 main>section:nth-child(3)>section:nth-child(3)>div:nth-child(3){
     background: url("../images/GitHub-Logo.png");
     background-size: cover;
-    width: 150px;
+    width: 13.5vw;
 }
 main>section:nth-child(3)>section:nth-child(3)>div:nth-child(4){
     background: url("../images/intellij-idea.png");
@@ -122,7 +122,7 @@ main>section:nth-child(3)>section:nth-child(3)>div:nth-child(4){
 main>section:nth-child(3)>section:nth-child(3)>div:nth-child(5){
     background: url("../images/Gimp.png");
     background-size: cover;
-    width: 150px;
+    width: 13.5vw;
 }
 /*------------------------------------------------------------------------*/
 /*Fourth section in main*/
@@ -133,19 +133,19 @@ main>section:nth-child(4)>section:nth-child(2){
     justify-content: space-evenly;
 }
 main>section:nth-child(4)>section:nth-child(2)>div:nth-child(1){
-    height:70%;
+    height:10vw;
     width: 15vw;
     background: url("../images/service1.png");
     background-size: cover;
 }
 main>section:nth-child(4)>section:nth-child(2)>div:nth-child(2){
-    height:70%;
+    height:10vw;
     width: 19vw;
     background: url("../images/Service2.png");
     background-size: cover;
 }
 main>section:nth-child(4)>section:nth-child(2)>div:nth-child(3){
-    height:70%;
+    height:10vw;
     width: 17vw;
     background: url("../images/service3.png");
     background-size: cover;
@@ -160,7 +160,7 @@ main>section:nth-child(5){
 /*sixth section in main*/
 main>section:nth-child(6)>section:nth-child(2){
     width: 98vw;
-    height: 200vh;
+    height: 110vw;
     display: grid;
     grid-template-rows: repeat(6,1fr);
     grid-template-columns: repeat(5,1fr);
@@ -209,7 +209,7 @@ main>section:nth-child(6)>section:nth-child(2)>div:nth-child(6){
 /*Last section in main*/
 main>section:nth-child(7) {
     background: #928989;
-    height: 35vh;
+    height: 30vh;
     width: 98vw;
     position: relative;
 }
@@ -226,8 +226,8 @@ main>section:nth-child(7)>section:nth-child(2){
 main>section:nth-child(7)>section:nth-child(2)>div:nth-child(1){
     background: url("../images/post-box.png");
     background-size: cover;
-    height: 30%;
-    width: 5%;
+    height: 4vw;
+    width: 4vw;
     position: absolute;
     top: 20%;
     left: 1%;
@@ -238,6 +238,7 @@ main>section:nth-child(7)>section:nth-child(2)>p:nth-child(2){
     top: 20%;
     left: 7%;
     margin: auto;
+    font-size: 1vw;
 }
 main>section:nth-child(7)>section:nth-child(2)>section:nth-child(3){
     height: 10vh;
@@ -250,7 +251,7 @@ main>section:nth-child(7)>section:nth-child(2)>section:nth-child(3){
     left: 16%;
 }
 main>section:nth-child(7)>section:nth-child(2)>section:nth-child(3)>a>div{
-    height: 9vh;
+    height: 4vw;
     width: 4vw;
 }
 main>section:nth-child(7)>section:nth-child(2)>section:nth-child(3)>a:nth-child(1)>div:nth-child(1){
@@ -280,7 +281,7 @@ main>section:nth-child(7)>section:nth-child(2)>section:nth-child(4){
     left: 16%;
 }
 main>section:nth-child(7)>section:nth-child(2)>section:nth-child(4)>a>div{
-    height: 9vh;
+    height: 4vw;
     width: 4vw;
 }
 main>section:nth-child(7)>section:nth-child(2)>section:nth-child(4)>a:nth-child(1)>div:nth-child(1){
@@ -335,18 +336,18 @@ main>section:nth-child(7)>section:nth-child(4){
 main>section:nth-child(7)>section:nth-child(4)>div{
     background: url("../images/MyLogo.png");
     background-size: cover;
-    height: 17vh;
-    width: 9vw;
+    height: 9vw;
+    width: 10vw;
     position: absolute;
-    bottom: 15%;
+    bottom: 30%;
     right: 15%;
     margin: auto;
 }
 main>section:nth-child(7)>section:nth-child(4)>p{
-    font-size: 2vh;
+    font-size: 1vw;
     color: white;
     position: absolute;
-    bottom: 2%;
+    bottom: 18%;
     right: 0;
 }
 /*------------------------------------------------------------------------*/
@@ -360,10 +361,11 @@ footer{
 footer>div{
     background: url("../images/MyLogo.png");
     background-size: cover;
-    height: 8vh;
-    width: 5vw;
+    height: 2.6vw;
+    width: 3vw;
     position: absolute;
     margin: auto;
+    top: 0;
     bottom: 0;
     left: 0;
     right: 0;
@@ -371,14 +373,47 @@ footer>div{
 /*------------------------------------------------------------------------*/
 /*Div in main*/
 main>a>div:first-of-type{
-    height: 6%;
-    width: 3%;
+    height: 40px;
+    width: 39px;
     border-radius: 100%;
     background: url("../images/arrow.png");
     background-size: cover;
     position: fixed;
-    right: 1%;
-    bottom: 8%;
+    right: 1vw;
+    bottom: 8vh ;
 }
+/*-----------------------------------------------------------*/
+/*media*/
+@media all and (min-width: 620px) and (max-width: 650px){
+    nav>ul>li{
+        font-size: 15px;
+    }
+}
+@media all and (min-width: 590px) and (max-width: 619px){
+    nav>ul>li{
+        font-size: 14px;
+    }
+}
+@media all and (min-width: 560px) and (max-width: 589px){
+    nav>ul>li{
+        font-size: 13px;
+    }
+}
+@media all and (min-width: 535px) and (max-width: 559px){
+    nav>ul>li{
+        font-size: 12px;
+    }
+}
+@media all and (min-width: 510px) and (max-width: 534px){
+    nav>ul>li{
+        font-size: 11px;
+    }
+}
+@media all and (min-width: 320px) and (max-width: 509px){
+    nav>ul>li{
+        font-size: 10px;
+    }
+}
+
 
 
