--- a/asserts/CSS/stylesheet.css
+++ b/asserts/CSS/stylesheet.css
@@ -40,7 +40,7 @@ main>section:nth-child(1){
     height: 49vw;
 }
 main>section:nth-child(1)>div:nth-child(1){
-    background: url("../images/Cover.png");
+    background: url("../images/Cover2.png");
     background-size: cover;
     width: 98.5vw;
     height: 25vw;
@@ -100,6 +100,16 @@ main>section:nth-child(1)>div:nth-child(3)>div:nth-child(3){
     left: 18vw;
     margin: auto;
 }
+main>section:nth-child(1)>div:nth-child(3)>div:nth-child(4){
+    background: url("../images/Social.png");
+    background-size: cover;
+    height: 3.6vw;
+    width: 18vw;
+    position: absolute;
+    top: 40vw;
+    left: 24vw;
+    margin: auto;
+}
 /*------------------------------------------------------------------------*/
 /*Second Section in main*/
 main>section:nth-child(2)>section:nth-child(2){
@@ -116,21 +126,30 @@ main>section:nth-child(2)>header{
 main>section:nth-child(2)>header:nth-child(1)>h1{
     color: black;
 }
+main>section:nth-child(2)>section:nth-child(2){
+    height: 15vw;
+}
 main>section:nth-child(2)>section:nth-child(2)>p{
-    font-size: 20px;
+    font-size: 1.5vw;
     color: red;
 }
 main>section:nth-child(2)>section:nth-child(2)>article>p{
     text-align: center;
+    font-size: 1.3vw;
+}
+main>section:nth-child(2)>section:nth-child(3){
+    position: relative;
+    height: 35vw;
 }
 main>section:nth-child(2)>section:nth-child(3)>div:nth-child(1){
     background: #cc3ef7;
     clip-path: polygon(29% 2%, 100% 19%, 84% 100%, 9% 95%, 0% 38%);
     height: 40vw;
     width: 40vw;
-    position: relative;
-    margin-bottom: 3vw;
-    margin-left: 6vw;
+    position: absolute;
+    bottom: 1vw;
+    left: 4.5vw;
+    margin: auto;
 }
 main>section:nth-child(2)>section:nth-child(3)>div:nth-child(1)>div:nth-child(1){
     background: url("../images/About.png");
@@ -148,12 +167,10 @@ main>section:nth-child(2)>section:nth-child(3)>div:nth-child(2){
     height: 40vw;
     width: 40vw;
     clip-path: polygon(70% 0, 100% 31%, 76% 60%, 100% 100%, 48% 87%, 11% 92%, 1% 51%, 14% 12%);
-    background: #0a53be;
+    background: #76bebd;
     position: absolute;
-    bottom: 0;
-    right: 0;
-    margin-right: 6vw;
-    margin-bottom: 1vw;
+    bottom: 1vw;
+    right: 5vw;
 }
 main>section:nth-child(2)>section:nth-child(3)>div:nth-child(2)>div:nth-child(1){
     background: url("../images/Education.png");
@@ -287,8 +304,8 @@ main>section:nth-child(5)>section:nth-child(2)>a:nth-child(1)>div:nth-child(1){
     margin: auto;
 }
 main>section:nth-child(5)>section:nth-child(2)>a:nth-child(1)>div:nth-child(1):hover{
-    height: 200px;
-    width: 400px;
+    height: 15vw;
+    width: 30vw;
 }
 main>section:nth-child(5)>section:nth-child(2)>a:nth-child(2)>div:nth-child(1){
     background: url("../images/clipart724392.png");
@@ -300,8 +317,8 @@ main>section:nth-child(5)>section:nth-child(2)>a:nth-child(2)>div:nth-child(1){
     margin: auto;
 }
 main>section:nth-child(5)>section:nth-child(2)>a:nth-child(2)>div:nth-child(1):hover{
-    height: 200px;
-    width: 400px;
+    height: 15vw;
+    width: 30vw;
 }
 main>section:nth-child(5)>section:nth-child(2)>a:nth-child(3)>div:nth-child(1){
     background: url("../images/Python.png");
@@ -314,8 +331,8 @@ main>section:nth-child(5)>section:nth-child(2)>a:nth-child(3)>div:nth-child(1){
     margin: auto;
 }
 main>section:nth-child(5)>section:nth-child(2)>a:nth-child(3)>div:nth-child(1):hover{
-    height: 180px;
-    width: 400px;
+    height: 14vw;
+    width: 30vw;
 }
 /*------------------------------------------------------------------------*/
 /*sixth section in main*/
@@ -331,14 +348,14 @@ main>section:nth-child(6)>section:nth-child(2)>div{
     border: 1px solid red;
 }
 main>section:nth-child(6)>section:nth-child(2)>div:nth-child(1){
-    grid-column: 1/4;
+    grid-column: 1/2;
     grid-row: 1/3;
     background: url("../images/3bf2e921-2b4f-42f7-9d5b-b277a1b47dbe.jpg");
     background-size: cover;
 }
 main>section:nth-child(6)>section:nth-child(2)>div:nth-child(2){
     grid-column: 4/6;
-    grid-row: 1/5;
+    grid-row: 1/4;
     background:url("../images/cov.jpg");
     background-size: cover;
 }
@@ -361,7 +378,7 @@ main>section:nth-child(6)>section:nth-child(2)>div:nth-child(5){
     background-size: cover;
 }
 main>section:nth-child(6)>section:nth-child(2)>div:nth-child(6){
-    grid-column: 3/7;
+    grid-column: 3/5;
     grid-row: 5/7;
     background: url("../images/IMG-20200930-WA00h04.jpg");
     background-size: cover;
@@ -545,7 +562,7 @@ main>a:nth-child(8)>div:first-of-type{
 }
 main>a:nth-child(9)>div{
     position: fixed;
-    top: 80vh;
+    top: 84vh;
     left: 2vw;
     height: 5px;
     width: 5px;
@@ -570,7 +587,7 @@ main>a:nth-child(10)>div:nth-child(1){
     background: red;
     border-radius: 100%;
     position: fixed;
-    top: 70vh;
+    top: 75vh;
     left: 2vw;
 }
 main>a:nth-child(10)>div:nth-child(1)>i:nth-child(1){
